Quickfix: corrected Slovakian language to Slovak, added overflow scrolling to left bar, updated sample collections data

--- a/src/css/Lema.css
+++ b/src/css/Lema.css
@@ -38,6 +38,7 @@ div.left-bar-container {
     flex-flow: column;
     border-right: 1px solid black;
     padding: 0.2em;
+    overflow-y: auto;
 }
 
 div.map-container {
